# jitmap

./: .clang-tidy  CMakeLists.txt  README.md
dev/cmake/: CompilerToolchain.cmake  GoogleBenchmark.cmake  GoogleTest.cmake
dev/lint/: autoformat.sh
dev/lint/clang-tidy/: run-clang-tidy.py
doc/presentation/adhoc-2020-04-21/: index.html
include/jitmap/: bitset.h  jitmap.h  size.h  tiny.h
include/jitmap/container/: container.h
include/jitmap/query/: compiler.h  expr.h  jit.h  matcher.h  optimizer.h  parser.h  parser_internal.h  query.h  type_fwd.h  type_traits.h
include/jitmap/util/: aligned.h  compiler.h  exception.h  fmt.h  pimpl.h  platform.h
src/jitmap/: CMakeLists.txt  jitmap.cc
src/jitmap/query/: codegen.h  compiler.cc  expr.cc  jit.cc  matcher.cc  optimizer.cc  parser.cc  parser_internal.h  query.cc
tests/: BenchmarkCMakeLists.txt.in  CMakeLists.txt  GTestCMakeLists.txt.in  bitset_test.cc  jitmap_benchmark.cc  jitmap_test.cc  query_test.h
tests/query/: CMakeLists.txt  compiler_test.cc  expr_test.cc  jit_test.cc  matcher_test.cc  optimizer_test.cc  parser_test.cc  query_test.cc
tools/: CMakeLists.txt  jitmap_ir.cc
